--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0ee65d5a-f622-43db-96b8-b1e855e48506</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
