--- a/MyApp/MyApp.csproj
+++ b/MyApp/MyApp.csproj
@@ -7,6 +7,11 @@
     <UserSecretsId>0ee65d5a-f622-43db-96b8-b1e855e48506</UserSecretsId>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Mapster" Version="7.3.0" />
+		<PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
+	</ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
